package com.panda.study.designmodel.strategy;

/**
 * Created by Administrator on 2019/8/7.
 */
public class Client {
    public static void main(String[] args) {
        //测试
    }
}
