package com.panda.study.designmodel_gp.interpreter.general;

import java.util.HashMap;

// 上下文环境类
public class Context extends HashMap {

}